# webapp_FastAPI

./: .env  .gitignore  Dockerfile  README.md  celerybeat-schedule  docker-compose.yml  pyproject.toml  run_app.py  send_msg_to_celery.py  test1.py
app/: config.py  main.py
app/core/abstractions/: singleton.py
app/core/celery/: celery.py  task.py
app/core/constants/: __init__.py  rabbitmq.py
app/core/database/: mongo.py  rabbitmq.py  rabbitmq_kombu.py  redis.py
app/core/exceptions/: __init__.py  respone_exception.py
app/core/mixins/: mongodb_mixins.py
app/core/schema/: api_response.py
app/core/shutdown_events/: shutdown.py
app/core/startup_events/: startup.py
app/core/verify/: token.py
app/core/worker/: __init__.py  base.py  rabbit_worker.py
app/login/: __init__.py  login_schema.py  login_utils.py  login_view.py  sync_password_expr.py  user.py
app/models/: employee.py
app/schema/: employee_schema.py
app/tools/: tools.py
app/user/models/: user.py
app/user/schema/: employee_schema.py  user_schema.py
app/user/utils/: employee.py  user.py
app/user/view/: __init__.py  employee_view.py  user_view.py
app/utils/: employee.py  new_employee.py
app/view/: __init__.py  employee_view.py
app_celery/: __init__.py  celery_re.py  email_worker.py  processor_handler_send_email.py  task_re.py
app_celery/worker/: __init__.py  base_consumer.py
app_celery/worker/process_send_email/: __init__.py  processor_handler_send_email.py
scripts/: initialize_project.sh  run_app.sh  run_celery.sh  run_celery_beat.sh  run_celery_flower.sh  run_celery_worker.sh  run_schedule_worker.sh
setup_rabbitmq/: Dockerfile  docker-compose.yml
